Fixed scaling issue on firefox

--- a/Cyberdyne/css/mainstyle.css
+++ b/Cyberdyne/css/mainstyle.css
@@ -256,7 +256,7 @@ label {
 
 .featured_img, .robotimg {
     max-height: 450px;
-    width: auto;
+    width: 100%;
     display: inline-block;
     border:  none;  
     position: relative;
